--- a/server/index.html
+++ b/server/index.html
@@ -6,5 +6,37 @@
         <div>
             <h1>URL Shortener Microservice</h1>
         </div>
+        <div>
+            <h3>User Stories></h3>
+            <ul>
+                <li>
+                    I can pass a URL as a parameter and I will 
+                    receive a shortened URL in the JSON response
+                </li>
+                <li>
+                    If I pass an invalid URL that doesn't follow the valid 
+                    http://www.example.com format, the JSON response will 
+                    contain an error instead.
+                </li>
+                <li>
+                    When I visit that shortened URL, it will redirect me
+                    to my original link.
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h3>Example Creation Usage</h3>
+            <p>https://powerful-caverns-13413.herokuapp.com/</p>
+            <p>https://powerful-caverns-13413.herokuapp.com/</p>
+        </div>
+        <div>
+            <h3>Example Creation Output</h3>
+        </div>
+        <div>
+            <h3>Usage</h3>
+        </div>
+        <div>
+            <h3>Will Redirect To:</h3>
+        </div>
     </body>
 </html>
