finishes index.html

--- a/server/index.html
+++ b/server/index.html
@@ -26,17 +26,19 @@
         </div>
         <div>
             <h3>Example Creation Usage</h3>
-            <p>https://powerful-caverns-13413.herokuapp.com/</p>
-            <p>https://powerful-caverns-13413.herokuapp.com/</p>
+            <p>https://powerful-caverns-13413.herokuapp.com/https://www.google.com</p>
         </div>
         <div>
             <h3>Example Creation Output</h3>
+            <p>{"short_url":"https://powerful-caverns-13413.herokuapp.com/1","long_url":"https://www.google.com"}</p>
         </div>
         <div>
             <h3>Usage</h3>
+            <p>https://powerful-caverns-13413.herokuapp.com/1</p>
         </div>
         <div>
             <h3>Will Redirect To:</h3>
+            <p>https://www.google.com</p>
         </div>
     </body>
 </html>
