--- a/server/index.html
+++ b/server/index.html
@@ -7,7 +7,7 @@
             <h1>URL Shortener Microservice</h1>
         </div>
         <div>
-            <h3>User Stories></h3>
+            <h3>User Stories</h3>
             <ul>
                 <li>
                     I can pass a URL as a parameter and I will 
