--- a/server/index.html
+++ b/server/index.html
@@ -37,7 +37,7 @@
             <p>https://powerful-caverns-13413.herokuapp.com/1</p>
         </div>
         <div>
-            <h3>Will Redirect To:</h3>
+            <h3>Will Redirect To</h3>
             <p>https://www.google.com</p>
         </div>
     </body>
